Version 5.5
-----------
Bug Fixed:

New Features:
* If a resource for disabled toolbar items isn't provided, an ImageList
   for disabled buttons is created for you.

The following changes have been made to the Win32++ code:
Added CToolbar::CreateDisabledImageList
   

Version 5.4
-----------
Bug Fixes:
* Text for toolbar buttons wasn't always displayed on Win2000
* It is now safe to call CToolbar::SetImageist multiple times

New Features
* Added Rebar themes, including:
  - Gradient background for the rebar control (any two colors)
  - Gradient background for the rebar bands (any two colors)
  - The Menubar can be locked in place.
  - The bands can be kept left.
  - Short bands
  - Bands can have rounded borders
  - Bands with rounded borders can have a flat style
* Added Toolbar themes, including:
  - Gradient background for hot buttons (any two colors)
  - Gradient background for pressed buttons (any two colors)
  - Colored outline for hot and pressed buttons (any color)
* Built in support for multiple toolbars (in rebars) with AddToolbarBand
* Added Forms Sample
* Added Themes Sample

The following changes have been made to the Win32++ code:
Added CDialog::Create
Added CFrame::SetMenubarBandSize
Added CMenubar::SetIcons (for imagelists)
Added CRebar::GetBandBorders
Added CRebar::GetBandRect
Added CRebar::GetRowHeight
Added CRebar::GetTheme
Added CRebar::OnEraseBkGnd
Added CRebar::RepositionBands
Added CRebar::SetTheme
Added CRebar::ShowGripper
Added CToolbar::GetMaxSize
Added CToolbar::GetTheme
Added CToolbar::ReplaceBitmap
Added CToolbar::SetTheme
Added CWinApp::SetAccelerators
Added CWnd::GradientFill
Added CWnd::LoadBitmap
Added CWnd::SolidFill
Added REBARTHEME struct
Added TOOLBARTHEME struct
Added GetComCtlVersion
Added IsXPThemed
Changed CFrame::AddToolbarBand
Changed CRebar::ResizeBand
Changed Toolbar::GetItemRect
Removed CFrame::SetButtons
Removed CWinApp::SetAcceleratorTable


Version 5.3
-----------
New Features: